Done with html and css sample 1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		Calculator
+		<div class="root">
+			<div class="row display">fdf</div>
+			<div class="row clear">
+				<div class="cell clear">C</div>
+				<div class="cell backspace"><-</div>
+				<div class="cell operator">/</div>
+			</div>
+			<div class="row numbers">
+				<div class="cell">7</div>
+				<div class="cell">8</div>
+				<div class="cell">9</div>
+				<div class="cell operator">x</div>
+			</div>
+			<div class="row numbers">
+				<div class="cell">4</div>
+				<div class="cell">5</div>
+				<div class="cell">6</div>
+				<div class="cell operator">-</div>
+			</div>
+			<div class="row numbers">
+				<div class="cell">1</div>
+				<div class="cell">2</div>
+				<div class="cell">3</div>
+				<div class="cell operator">+</div>
+			</div>
+			<div class="row zero">
+				<div class="cell zero">0</div>
+				<div class="cell operator">=</div>
+			</div>
+		</div>
 	</body>
 </html>
