cells change color when user hovers

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	</head>
 	<body>
 		<div class="root">
-			<div class="row display">fdf</div>
+			<div class="row display">f</div>
 			<div class="row clear">
 				<div class="cell clear">C</div>
-				<div class="cell backspace"><-</div>
-				<div class="cell operator">/</div>
+				<div class="cell backspace">←</div>
+				<div class="cell operator">÷</div>
 			</div>
 			<div class="row numbers">
 				<div class="cell">7</div>
