--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
 	</head>
 	<body>
 		<div class="root">
-			<div class="row display">f</div>
+			<div class="row display">0</div>
 			<div class="row clear">
 				<div class="cell clear">C</div>
 				<div class="cell backspace">←</div>
 				<div class="cell operator">÷</div>
 			</div>
 			<div class="row numbers">
-				<div class="cell">7</div>
-				<div class="cell">8</div>
-				<div class="cell">9</div>
+				<div class="cell number">7</div>
+				<div class="cell number">8</div>
+				<div class="cell number">9</div>
 				<div class="cell operator">x</div>
 			</div>
 			<div class="row numbers">
-				<div class="cell">4</div>
-				<div class="cell">5</div>
-				<div class="cell">6</div>
+				<div class="cell number">4</div>
+				<div class="cell number">5</div>
+				<div class="cell number">6</div>
 				<div class="cell operator">-</div>
 			</div>
 			<div class="row numbers">
-				<div class="cell">1</div>
-				<div class="cell">2</div>
-				<div class="cell">3</div>
+				<div class="cell number">1</div>
+				<div class="cell number">2</div>
+				<div class="cell number">3</div>
 				<div class="cell operator">+</div>
 			</div>
 			<div class="row zero">
 				<div class="cell zero">0</div>
-				<div class="cell operator">=</div>
+				<div class="cell operator equal">=</div>
 			</div>
 		</div>
+		<script src="./index.js"></script>
 	</body>
 </html>
